// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterListUsagePopover opens the popover onButtonClick 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButtonIcon
        aria-label="Edit description"
        color="primary"
        data-test-subj="mlFilterListEditDescriptionButton"
        iconType="pencil"
        isDisabled={false}
        onClick={[Function]}
        size="s"
      />
    }
    closePopover={[Function]}
    display="inline-block"
    hasArrow={true}
    id="filter_list_description_popover"
    initialFocus="#filter_list_edit_description_row"
    isOpen={true}
    ownFocus={true}
    panelPaddingSize="m"
    repositionToCrossAxis={true}
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <EuiForm>
        <EuiFormRow
          id="filter_list_edit_description_row"
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Filter list description"
              id="xpack.ml.settings.filterLists.editDescriptionPopover.filterListDescriptionAriaLabel"
            />
          }
        >
          <EuiFieldText
            data-test-subj="mlFilterListDescriptionInput"
            name="filter_list_description"
            onChange={[Function]}
            value="A list of known safe domains"
          />
        </EuiFormRow>
      </EuiForm>
    </div>
  </EuiPopover>
</div>
`;

exports[`FilterListUsagePopover renders the popover with a description 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButtonIcon
        aria-label="Edit description"
        color="primary"
        data-test-subj="mlFilterListEditDescriptionButton"
        iconType="pencil"
        isDisabled={false}
        onClick={[Function]}
        size="s"
      />
    }
    closePopover={[Function]}
    display="inline-block"
    hasArrow={true}
    id="filter_list_description_popover"
    initialFocus="#filter_list_edit_description_row"
    isOpen={false}
    ownFocus={true}
    panelPaddingSize="m"
    repositionToCrossAxis={true}
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <EuiForm>
        <EuiFormRow
          id="filter_list_edit_description_row"
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Filter list description"
              id="xpack.ml.settings.filterLists.editDescriptionPopover.filterListDescriptionAriaLabel"
            />
          }
        >
          <EuiFieldText
            data-test-subj="mlFilterListDescriptionInput"
            name="filter_list_description"
            onChange={[Function]}
            value="A list of known safe domains"
          />
        </EuiFormRow>
      </EuiForm>
    </div>
  </EuiPopover>
</div>
`;

exports[`FilterListUsagePopover renders the popover with no description 1`] = `
<div>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiButtonIcon
        aria-label="Edit description"
        color="primary"
        data-test-subj="mlFilterListEditDescriptionButton"
        iconType="pencil"
        isDisabled={false}
        onClick={[Function]}
        size="s"
      />
    }
    closePopover={[Function]}
    display="inline-block"
    hasArrow={true}
    id="filter_list_description_popover"
    initialFocus="#filter_list_edit_description_row"
    isOpen={false}
    ownFocus={true}
    panelPaddingSize="m"
    repositionToCrossAxis={true}
  >
    <div
      style={
        Object {
          "width": "300px",
        }
      }
    >
      <EuiForm>
        <EuiFormRow
          id="filter_list_edit_description_row"
          label={
            <Memo(MemoizedFormattedMessage)
              defaultMessage="Filter list description"
              id="xpack.ml.settings.filterLists.editDescriptionPopover.filterListDescriptionAriaLabel"
            />
          }
        >
          <EuiFieldText
            data-test-subj="mlFilterListDescriptionInput"
            name="filter_list_description"
            onChange={[Function]}
          />
        </EuiFormRow>
      </EuiForm>
    </div>
  </EuiPopover>
</div>
`;
